--- a/project/static/css/styles.css
+++ b/project/static/css/styles.css
@@ -6,3 +6,38 @@ version: 2.8.1
 */
 html{color:#000;background:#FFF;}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,button,textarea,p,blockquote,th,td{margin:0;padding:0;}table{border-collapse:collapse;border-spacing:0;}fieldset,img{border:0;}address,caption,cite,code,dfn,em,strong,th,var,optgroup{font-style:inherit;font-weight:inherit;}del,ins{text-decoration:none;}li{list-style:none;}caption,th{text-align:left;}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal;}q:before,q:after{content:'';}abbr,acronym{border:0;font-variant:normal;}sup{vertical-align:baseline;}sub{vertical-align:baseline;}legend{color:#000;}input,button,textarea,select,optgroup,option{font-family:inherit;font-size:inherit;font-style:inherit;font-weight:inherit;}input,button,textarea,select{*font-size:100%;}
 
+html, body {
+font-family: Verdana, sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+font-weight: bold;
+margin: 1em 0;
+}
+
+h1 {
+font-size: 1.5em;
+}
+
+h2 {
+font-size: 1.3em;
+}
+
+h3, h4, h5 {
+font-size: 1.1em;
+}
+
+p, li {
+font-size: 0.8em;
+margin: 1em 0;
+}
+
+li {
+margin-left: 1em;
+}
+
+#container {
+position: relative;
+width: 800px;
+margin: 10px;
+}
