Added styles for search box.

--- a/project/static/css/styles.css
+++ b/project/static/css/styles.css
@@ -28,8 +28,12 @@ font-size: 1.1em;
 }
 
 p, li {
-font-size: 0.8em;
+font-size: 1em;
 margin: 1em 0;
+}
+
+input {
+padding: 0.2em;
 }
 
 li {
@@ -39,5 +43,9 @@ margin-left: 1em;
 #container {
 position: relative;
 width: 800px;
-margin: 10px;
+margin: 10px auto;
+}
+
+#q {
+width: 500px;
 }
