--- a/project/static/css/styles.css
+++ b/project/static/css/styles.css
@@ -40,6 +40,18 @@ li {
 margin-left: 1em;
 }
 
+a:link {
+text-decoration: none;
+}
+
+a:visited {
+text-decoration: none;
+}
+
+a:hover, a:active {
+text-decoration: underline;
+}
+
 #container {
 position: relative;
 width: 800px;
