--- a/project/static/css/styles.css
+++ b/project/static/css/styles.css
@@ -71,8 +71,15 @@ padding: 0.5em;
 background-color: #ffffcc;
 }
 
+span.place-type {
+font-size: 0.8em;
+font-style: italic;
+color: #999;
+}
+
 span.place-info {
 display: block;
+margin: 0.2em 0 0 0.5em;
 font-size: 0.8em;
 color: #999;
 }
@@ -85,4 +92,9 @@ span.place-info-map img {
 margin-top: 1em;
 width: 300px;
 height: 200px;
+}
+
+#map {
+height: 400px;
+border: 1px solid black;
 }
