--- a/project/static/css/styles.css
+++ b/project/static/css/styles.css
@@ -32,6 +32,14 @@ font-size: 1em;
 margin: 1em 0;
 }
 
+strong {
+font-weight: bold;
+}
+
+em {
+font-style: italic;
+}
+
 input {
 padding: 0.2em;
 }
@@ -99,7 +107,10 @@ height: 100px;
 }
 
 #header h1 {
-line-height: 100px;
+position: absolute;
+top: 40px;
+left: 0;
+font-size: 1.1em;
 margin: 0;
 }
 
