--- a/project/static/css/styles.css
+++ b/project/static/css/styles.css
@@ -8,15 +8,18 @@ html{color:#000;background:#FFF;}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pr
 
 html, body {
 font-family: Verdana, sans-serif;
+background-color: #d5eaae;
 }
 
 h1, h2, h3, h4, h5, h6 {
+font-family: Georgia, serif;
 font-weight: bold;
 margin: 1em 0;
+color: #555;
 }
 
 h1 {
-font-size: 1.5em;
+font-size: 1.7em;
 }
 
 h2 {
@@ -38,6 +41,15 @@ font-weight: bold;
 
 em {
 font-style: italic;
+}
+
+hr{
+height:1px;
+color:#aaa;
+background-color:#aaa;
+border:0;
+width:98%;
+margin:1em auto;
 }
 
 input {
@@ -62,8 +74,22 @@ text-decoration: underline;
 
 #container {
 position: relative;
-width: 800px;
-margin: 10px auto;
+width: 960px;
+margin: 0 auto;
+padding: 10px 10px 0 10px;
+background-color: #fff;
+}
+
+#footer {
+text-align: center;
+border-top: 1px solid #ccc;
+}
+
+#footer p {
+font-size: 0.7em;
+color: #666;
+margin: 0.5em;
+line-height: 1.5em;
 }
 
 #q {
@@ -104,24 +130,36 @@ height: 200px;
 
 #header {
 height: 100px;
+border-bottom: 10px solid #86b21f;
+background-color: #000;
 }
 
 #header h1 {
 position: absolute;
 top: 40px;
 left: 0;
-font-size: 1.1em;
+font-size: 1.3em;
 margin: 0;
+}
+
+#header h1.place-header {
+
 }
 
 #header form {
 position: absolute;
 top: 35px;;
-right: 0;
+right: 100px;
 }
 
 #header #q {
 width: 300px;
+}
+
+#logo {
+width: 358px;
+height: 72px;
+margin: 10px 0 0 50px;
 }
 
 #map {
